--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ add_subdirectory("OOVisualization")
 add_subdirectory("OOInteraction")
 
 # Object-Oriented layer - Extras
-# add_subdirectory("JavaExport")
+add_subdirectory("JavaExport")
 # add_subdirectory("OODebug")
 # add_subdirectory("CppExport")
 # add_subdirectory("CppImport")
