--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ add_subdirectory("JavaExport")
 add_subdirectory("OODebug") # uses JavaExport
 add_subdirectory("CppExport")
 add_subdirectory("CppImport")
-# add_subdirectory("PythonWrapperGenerator")
+add_subdirectory("PythonWrapperGenerator")
 add_subdirectory("InformationScripting") # uses the generator and OODebug
 
 # Object-Oriented layer - Contracts
